--- a/style.css
+++ b/style.css
@@ -107,6 +107,9 @@ nav{
         gap: 2rem;
         padding-top: 60px;
     }
+    #label{
+        margin-top: 20px;
+    }
 }
 @media screen and (max-width: 500px){
     .icon{
